--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "portfolio",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://ewillroth.github.io",
 	"dependencies": {
 		"@material-ui/core": "^3.9.2",
 		"@material-ui/icons": "^3.0.2",
@@ -11,6 +12,8 @@
 		"styled-components": "^4.1.3"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -b master -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
